
- mime disposition change : alternative part inside related part, images attached to related part
  Lotus Notes displays html part now
  *** UNTESTED WITH EMBEDDED IMAGES ***
  This fixes http://plone.org/products/easynewsletter/issues/47
  [regisrouet]

- parser changes : don't try to traverse absolute href links, don't try to embed images
  *** THIS MAY NOT WHAT YOU WANT ***
  [regisrouet]

- non portlet subscription/unsubscription form
  This fixes http://plone.org/products/easynewsletter/issues/3
  [regisrouet]

- put Content-ID header of image between <> as suggested by hansemann in issue 22
  [regisrouet]

- don't put sender name beetween quotes
  [regisrouet]

- better feedback on send
  [regisrouet]

- remove title property in types.xml
  [regisrouet]

- use mail icon for newsletter item
  [regisrouet]

- fix non-ascii chars in headers
  This fixes http://plone.org/products/easynewsletter/issues/17 & 19
  [regisrouet]

- external delivery service with local utility
  This fixes http://plone.org/products/easynewsletter/issues/31
  *** BREAKING COMPATIBILITY CHANGE ***
  [regisrouet]

- keep issue's format text after refresh
  This fixes http://plone.org/products/easynewsletter/issues/32
  [regisrouet]

- choice for confirmation from & mailhost, test mailhost
  This fixes http://plone.org/products/easynewsletter/issues/33
  [regisrouet]

- remove "please install inqbus.plone.fastmemberproperties" from logs
  This fixes http://plone.org/products/easynewsletter/issues/34
  [regisrouet]

- don't enable syndication for newly created newsletters and issues (it was showing site RSS)
  This fixes http://plone.org/products/easynewsletter/issues/35
  [regisrouet]

- inappropriate error message on confirmation page
  This fixes http://plone.org/products/easynewsletter/issues/36
  [regisrouet]

- confirmation encoding header
  This fixes http://plone.org/products/easynewsletter/issues/37
  [regisrouet]

- untranslated message