@@ -15,6 +15,10 @@ Changelog
   *** THIS MAY NOT WHAT YOU WANT ***
   [regisrouet]
 
+- reviewer can send and "make draft" issues, editor can edit and refresh drafts
+  (no upgrade step provided : reinstall product and update security settings in portal_workflow)
+  [regisrouet]
+
 - non portlet subscription/unsubscription form
   This fixes http://plone.org/products/easynewsletter/issues/3
   [regisrouet]
